--- a/vue-my-shopping/package.json
+++ b/vue-my-shopping/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.13.2",
     "router": "^1.3.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
