--- a/vue-my-shopping/package.json
+++ b/vue-my-shopping/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "router": "^1.3.5",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.3.2",
     "vue-table-with-tree-grid": "^0.2.4"
   },
